crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__prefix_ids__prefix_ids-11.snap
---
source: crates/oxvg_optimiser/src/jobs/prefix_ids.rs
expression: "test_config(r#\"{ \"prefixIds\": {\n            \"prefix\": \"prefixIds_11_svg_txt\"\n        } }\"#,\nSome(r#\"<svg width=\"120\" height=\"120\" xmlns=\"http://www.w3.org/2000/svg\">\n    <defs>\n        <linearGradient id=\"fill\"/>\n        <linearGradient id=\"stroke\"/>\n    </defs>\n    <rect style=\"fill:url(#fill); stroke: url(#stroke)\" x=\"10\" y=\"10\" width=\"100\" height=\"100\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="120" height="120">
    <defs>
        <linearGradient id="prefixIds_11_svg_txt__fill"/>
        <linearGradient id="prefixIds_11_svg_txt__stroke"/>
    </defs>
    <rect style="fill:url(#prefixIds_11_svg_txt__fill);stroke:url(#prefixIds_11_svg_txt__stroke)" x="10" y="10" width="100" height="100"/>
</svg>
