crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__prefix_ids__prefix_ids-13.snap
---
source: crates/oxvg_optimiser/src/jobs/prefix_ids.rs
expression: "test_config(r#\"{ \"prefixIds\": {\n            \"prefix\": \"prefixIds_13_svg_txt\"\n        } }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 1 1\">\n  <style>\n    <!-- uwu -->\n    #a13 {} <!-- xyz -->\n    #b13 {}\n  </style>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1 1">
    <style>
        #prefixIds_13_svg_txt__a13{}#prefixIds_13_svg_txt__b13{}
    </style>
</svg>
