crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__prefix_ids__prefix_ids-5.snap
---
source: crates/oxvg_optimiser/src/jobs/prefix_ids.rs
expression: "test_config(r#\"{ \"prefixIds\": {\n            \"prefix\": \"prefixIds_05_svg_txt\"\n        } }\"#,\nSome(r#\"<svg width=\"340\" height=\"120\" xmlns=\"http://www.w3.org/2000/svg\">\n    <defs>\n        <linearGradient id=\"gradient_1\">\n            <stop offset=\"5%\" stop-color=\"green\"/>\n            <stop offset=\"95%\" stop-color=\"gold\"/>\n        </linearGradient>\n        <linearGradient id=\"gradient_2\">\n            <stop offset=\"5%\" stop-color=\"red\"/>\n            <stop offset=\"95%\" stop-color=\"black\"/>\n        </linearGradient>\n        <linearGradient id=\"gradient_3\">\n            <stop offset=\"5%\" stop-color=\"blue\"/>\n            <stop offset=\"95%\" stop-color=\"orange\"/>\n        </linearGradient>\n    </defs>\n    <rect fill=\"url(#gradient_1)\" x=\"10\" y=\"10\" width=\"100\" height=\"100\"/>\n    <rect fill=\"url(#gradient_2)\" x=\"120\" y=\"10\" width=\"100\" height=\"100\"/>\n    <rect fill=\"url(#gradient_3)\" x=\"230\" y=\"10\" width=\"100\" height=\"100\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="340" height="120">
    <defs>
        <linearGradient id="prefixIds_05_svg_txt__gradient_1">
            <stop offset="5%" stop-color="green"/>
            <stop offset="95%" stop-color="gold"/>
        </linearGradient>
        <linearGradient id="prefixIds_05_svg_txt__gradient_2">
            <stop offset="5%" stop-color="red"/>
            <stop offset="95%" stop-color="black"/>
        </linearGradient>
        <linearGradient id="prefixIds_05_svg_txt__gradient_3">
            <stop offset="5%" stop-color="blue"/>
            <stop offset="95%" stop-color="orange"/>
        </linearGradient>
    </defs>
    <rect fill="url(#prefixIds_05_svg_txt__gradient_1)" x="10" y="10" width="100" height="100"/>
    <rect fill="url(#prefixIds_05_svg_txt__gradient_2)" x="120" y="10" width="100" height="100"/>
    <rect fill="url(#prefixIds_05_svg_txt__gradient_3)" x="230" y="10" width="100" height="100"/>
</svg>
